# parcae

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
parcae/: _envbuilder.py  errors.py
parcae/_internal/: envbuilder.py  errors.py
parcae/_vendor/: README.md  vendor.txt
parcae/_vendor/certifi/: __main__.py  core.py
parcae/_vendor/click/: LICENSE.rst  __init__.py  _termui_impl.py  core.py  decorators.py  parser.py  types.py
parcae/_vendor/h11/: __init__.py  _headers.py
parcae/_vendor/h11/tests/: test_against_stdlib_http.py
parcae/_vendor/httpcore/: LICENSE.md  _ssl.py  _synchronization.py
parcae/_vendor/httpcore/_async/: http11.py
parcae/_vendor/httpcore/_sync/: http11.py  http_proxy.py
parcae/_vendor/httpcore/backends/: auto.py
parcae/_vendor/httpx/: LICENSE.md  _client.py  _compat.py  _config.py  _decoders.py  _exceptions.py  _main.py  _models.py  _urlparse.py  _urls.py  _utils.py
parcae/_vendor/httpx/_transports/: asgi.py  default.py
parcae/_vendor/idna/: LICENSE.md  core.py
parcae/_vendor/sniffio/: _impl.py
parcae/_vendor/typer/: _typing.py  params.py  rich_utils.py
